--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Ein kleiner Python Kurs - Wir coden ein Quiz
+logo: logo-hacker-school.png
+description: Dieser Kurs kommt von <a href="https://github.com/Lotterleben/">Lotte</a>
+show_downloads: false
 theme: jekyll-theme-minimal
